kubernetes/prod/apps/immich/immich-extras/app/ingress-immich-cloudflared.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-cloudflared
  namespace: immich
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: immich.${BASE_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: immich-server
            port:
              number: 2283
        path: /
        pathType: Prefix
